--- a/client/src/app/nav/nav/nav.component.html
+++ b/client/src/app/nav/nav/nav.component.html
@@ -1,23 +1,26 @@
-<p>nav works!</p><nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Dating App</a>
+<p>nav works!</p><nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
+    <div class="container">
+      <a class="navbar-brand" routerLink="/" routerLinkActive='active' >Dating App</a>
 
-        <ul class="navbar-nav me-auto mb-2 mb-md-0" *ngIf="accountService.currentUser$ |async">
-          <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="#">Matches</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Lists</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Messages</a>
-          </li>
+        <ul class="navbar-nav me-auto mb-2 mb-md-0" >
+          <ng-container *ngIf="accountService.currentUser$ |async">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" routerLink="/members" routerLinkActive='active'>Matches</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" routerLink="/lists" routerLinkActive='active'>Lists</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" routerLink="/messages" routerLinkActive='active'>Messages</a>
+            </li>
+          </ng-container>
+
         </ul>
 
-        <div class="btn-group" dropdown  *ngIf="accountService.currentUser$ | async">
+        <div class="btn-group" dropdown  *ngIf="(accountService.currentUser$ | async) as user">
             <button id="button-basic" dropdownToggle type="button" class="btn btn-primary dropdown-toggle"
                     aria-controls="dropdown-basic">
-                    Welcome user <span class="caret"></span>
+                    Welcome {{user.username | titlecase}} <span class="caret"></span>
             </button>
             <ul id="dropdown-basic" *dropdownMenu class="dropdown-menu mt-2"
                 role="menu" aria-labelledby="button-basic">
@@ -30,7 +33,7 @@
         <div class="d-flex" [formGroup]='loginForm' *ngIf="!(accountService.currentUser$ | async)">
           <input class="form-control me-2" type="text" placeholder="Username" formControlName="username">
           <input class="form-control me-2" type="password" placeholder="Password" formControlName="password">
-          <button class="btn btn-outline-success" type="submit" (click)="login()">Login</button>
+          <button class="btn btn-success" type="submit" (click)="login()">Login</button>
         </div>
       </div>
   </nav>
