--- a/client/src/app/nav/nav/nav.component.html
+++ b/client/src/app/nav/nav/nav.component.html
@@ -26,7 +26,7 @@
             </button>
             <ul id="dropdown-basic" *dropdownMenu class="dropdown-menu mt-2"
                 role="menu" aria-labelledby="button-basic">
-              <li role="menuitem"><a class="dropdown-item" >Edit profile</a></li>
+              <li role="menuitem"><a class="dropdown-item" routerLink="/member/edit">Edit profile</a></li>
               <li class="divider dropdown-divider"></li>
               <li role="menuitem"><a class="dropdown-item" (click)="logout()">Logout</a></li>
             </ul>
