End of Section 11

--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -61,7 +61,7 @@
                 <p>{{member.interests}}</p>
             </tab>
             <tab heading="Photos">
-
+                <app-photo-editor [member]="member"></app-photo-editor>
             </tab>
             <tab heading="Messages">
 
