--- a/client/src/app/nav/nav/nav.component.html
+++ b/client/src/app/nav/nav/nav.component.html
@@ -20,6 +20,7 @@
         </ul>
 
         <div class="btn-group" dropdown  *ngIf="(accountService.currentUser$ | async) as user">
+            <img src="{{user.photoUrl || './assets/user.png'}}" alt="{{user.username}}">
             <button id="button-basic" dropdownToggle type="button" class="btn btn-primary dropdown-toggle"
                     aria-controls="dropdown-basic">
                     Welcome {{user.username | titlecase}} <span class="caret"></span>
