End of Section12

--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -3,7 +3,7 @@
         <h1>Your Profile</h1>
     </div>
     <div class="col-8">
-        <div class="cleart alert-info" *ngIf="editForm.dirty">
+        <div class="clear alert-info" *ngIf="editForm.dirty">
             <strong>Information:</strong> you have made changes. Any unsaved changes will be lost
         </div>
     </div>
