--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -2,13 +2,36 @@
     <h2 class="text-center text-primary">Sign up</h2>
     <hr>
     <div class="form-group">
-        <input type="text" class="form-control" formControlName="username">
+        <label for="" class="control-label" style="margin-right:10px">I am a:</label>
+        <label class="radio-inline">
+            <input type="radio" value='male' formControlName='gender'>Male
+            <input type="radio" value='female' formControlName='gender' class="ml-3">Female
+        </label>
     </div>
-    <div class="form-group">
-        <input type="password" class="form-control" formControlName="password">
+
+
+    <app-text-input [formControl]="registerForm.controls['username']" [label]="'username'" [messages]='usernameMsg' ></app-text-input>
+    <app-text-input [formControl]="registerForm.controls['knownAs']" [label]="'knownAs'" [messages]='usernameMsg' ></app-text-input>
+    <app-date-input [formControl]="registerForm.controls['dateOfBirth']" [label]="'dateOfBirth'" [messages]='usernameMsg' [maxDate]='maxDate'></app-date-input>
+
+    <app-text-input [formControl]="registerForm.controls['city']" [label]="'city'" [messages]='usernameMsg' ></app-text-input>
+    <app-text-input [formControl]="registerForm.controls['country']" [label]="'country'" [messages]='usernameMsg' ></app-text-input>
+
+    <app-text-input [formControl]="registerForm.controls['password']" [label]="'password'" [messages]='passwordMsg' type="password"></app-text-input>
+    <app-text-input [formControl]="registerForm.controls['confirmPassword']" [label]="'confirmPassword'" [messages]='passwordMsg' type="password"></app-text-input>
+
+    <div *ngIf="validationErrors.length >0" class="row mt-5">
+        <div class="text-danger" *ngFor="let error of validationErrors">
+          {{error}}
+        </div>
     </div>
+
     <div class="form-group text-center">
-        <button class="btn btn-success mr-2" type="submit" (click)="register()">Register</button>
+        <button class="btn btn-success mr-2" type="submit" (click)="register()" [disabled]="registerForm.invalid">Register</button>
         <button class="btn btn-default mr-2" type="button" (click)="cancel()">Cancel</button>
     </div>
+</div>
+
+<div class="row">
+    {{registerForm.status}}
 </div>
