--- a/client/src/app/members/member-list/member-list.component.html
+++ b/client/src/app/members/member-list/member-list.component.html
@@ -1,7 +1,58 @@
+<div class="text-center mt-3">
+  <h2>Your Matches - {{pagination?.totalItems}} found</h2>
+</div>
+
+<div class="container mt-3">
+  <div class="form-inline mb-3" [formGroup]="filterForm">
+    <div class="form-group">
+      <label for="">Age from:</label>
+      <input type="number" class="form-control ml-1" style="width:70px;"formControlName="minAge">
+    </div>
+    <div class="form-group px-2">
+      <label for="">Age to:</label>
+      <input type="number" class="form-control ml-1" style="width:70px;"formControlName="maxAge">
+    </div>
+    <div class="form-group px-2">
+      <label for="">show:</label>
+      <select class="form-control ml-1" formControlName="gender">
+        <option *ngFor="let gender of genderList" [value]="gender.value">
+          {{gender.display}}
+                </option>
+      </select>
+    </div>
+
+    <button class="btn btn-primary ml-1" type="submit" (click)="applyFilter()">Apply Filter</button>
+    <button class="btn btn-primary ml-1" type="button" (click)="resetFilters()">Reset</button>
+
+   <div class="col">
+    <div class="btn-group float-right">
+      <button type='button' class="btn btn-primary"  (click)="setOrderby('lastActive')" btnRadio='lastActive' >Last Active</button>
+      <button type='button' class="btn btn-primary"  (click)="setOrderby('created')" btnRadio='created'>Newest Members</button>
+    </div>
+   </div>
+
+
+  </div>
+</div>
+
 <div class="row">
-  <div class="col-2" *ngFor="let member of (members$ | async)">
+  <div class="col-2" *ngFor="let member of members">
     <p>
       <app-member-card [member]="member"></app-member-card>
     </p>
   </div>
+</div>
+
+<div class="d-flex justify-content-center" *ngIf="pagination">
+  <pagination 
+  [boundaryLinks]="true"
+  [totalItems]="pagination.totalItems"
+  [itemsPerPage]="pagination.itemsPerPage"
+  [(ngModel)]="pagination.currentPage"
+  (pageChanged)="pageChanged($event)"
+  previousText="&lsaquo;"
+  nextText="&rsaquo;"
+  firstText="&laquo;" 
+  lastText="&raquo;">
+</pagination>
 </div>
